--- a/src/main/java/view/BefejezettSzerelesek.fxml
+++ b/src/main/java/view/BefejezettSzerelesek.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -48,5 +49,6 @@
             </TableView>
          </children>
       </VBox>
+      <Button fx:id="vissza" layoutX="816.0" layoutY="576.0" mnemonicParsing="false" onAction="#visszaazUjSzerelesekFelvetelehezPushed" text="Vissza a szerelesek felveteléhez" />
    </children>
 </AnchorPane>
