--- a/src/main/java/view/TulajdonosEsAutoAdatai.fxml
+++ b/src/main/java/view/TulajdonosEsAutoAdatai.fxml
@@ -2,14 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TulajdonosEsAutoAdataiController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TulajdonosEsAutoAdataiController">
    <children>
       <VBox layoutX="100.0" layoutY="138.0" prefHeight="400.0" prefWidth="600.0" spacing="5.0">
          <children>
@@ -31,7 +30,6 @@
                   <TextField fx:id="Rendszam" prefWidth="200.0" promptText="Rendszám" />
                </children>
             </HBox>
-            <TextArea fx:id="Problema" prefHeight="200.0" prefWidth="200.0" promptText="Probléma" />
             <Button mnemonicParsing="false" onAction="#szerelesFelvetelePushed" text="Szerelés felvétele" />
             <Button mnemonicParsing="false" onAction="#folyamatbanLevoSzerelesekPushed" text="Folyamatban lévő szerelések" />
             <Button fx:id="Statisztika" mnemonicParsing="false" onAction="#statisztikaPushed" text="Statisztika" />
